--- a/Homepage/Home.html
+++ b/Homepage/Home.html
@@ -57,7 +57,7 @@
             <p>" Be A New Flower Today, Let Butterfly Touch You "</p>
        <div id="slider">
                 <div id="Sl">
-                    <a href='Home.html'><img  src="images/SLIDE1.png"></a>
+                    <a href='Home.html'><img  src="images/SLIDE1.PNG"></a>
                     
                 </div>
                 <button id ="btnw"class="prew fa fa-chevron-left" style="font-size: 2VW" onclick="prewImage()"></button>
