--- a/Homepage/Home.html
+++ b/Homepage/Home.html
@@ -261,7 +261,7 @@
          <div class="product-grid1">
              <div class="product-image1">
                  <a href="#">
-                     <img class="pic-11" src="images/soap1a.jpg">
+                     <img class="pic-11" src="images/Soap1a.jpg">
                      <img class="pic-21" src="images/soap1b.jpg">
                  </a>
                  <span class="product-trend-label1">TREND</span>
