--- a/Homepage/Home.html
+++ b/Homepage/Home.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="CSS/responsive.css">
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> 
-    <script src="js/zindex.js" type="text/javascript"></script>
+    <script src="JS/zindex.js" type="text/javascript"></script>
 
-    <script src="js/scripts.js" type="text/javascript"></script>
+    <script src="JS/scripts.js" type="text/javascript"></script>
 
     <title>Beaudei - High-Quality Makeup and Skincare</title>
     <link rel="icon" type="image/x-icon" href="images/SmallIcon.png">
@@ -338,10 +338,10 @@
         <div class="foot"><h1>© 2020 BEAUDEI</h1></div>
     </div>
 </footer>
-    <script src="js/scripts.js" type="text/javascript"></script>
+    <script src="JS/scripts.js" type="text/javascript"></script>
 
     
-    <script  language= "javascript" src="js/zindex.js" type="text/javascript"></script>
+    <script  language= "javascript" src="JS/zindex.js" type="text/javascript"></script>
   
     
 </body>
