--- a/Homepage/Home.html
+++ b/Homepage/Home.html
@@ -31,7 +31,7 @@
         <ul> 
             <a href="javascript:void(0);" class="mobile-menu"><i class="ti-menu"></i></a>
             <li><a href="Home.html" class="active" >Home</a></li>
-            <li><a href="../Promotion/promotion.html">Promotion</a></li>
+            <li><a href="../Promotion/Promotion.html">Promotion</a></li>
             <li class="Dropdown">
                 <a href="#" ">Product<i class="fa fa-caret-down"></i></a>
                 
