--- a/Promotion/Promotion.html
+++ b/Promotion/Promotion.html
@@ -58,8 +58,8 @@
                      <div class="product-grid">
                          <div class="product-image">
                             <a href="#">
-                            <img class="pic-1" src="images/bestseller1a.png">
-                            <img class="pic-2" src="images/bestseller1b.png">
+                            <img class="pic-1" src="images/bestseller1a.PNG">
+                            <img class="pic-2" src="images/bestseller1b.PNG">
                             </a>
                             <span class="product-trend-label">#1</span>
                             <ul class="social">
